tests/other-tests/tests/expand/fail/invalid_syntax.err.txt
error: expected one of `!` or `::`, found `ipsum`
 --> /tests/expand/fail/invalid_syntax.rs:1:7
  |
1 | lorem ipsum dolor sit amet.
  |       ^^^^^ expected one of `!` or `::`
error: could not compile `<CRATE>` (bin "<BIN>") due to 1 previous error
